--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,6 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
+    h1="HELLO WORLD"
     h1= message
+    script(src="build/client.js") 
