--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
+    
   body
-    h1="HELLO WORLD"
-    h1= message
-    script(src="build/client.js") 
+    h1= "The message is:" + message
+    script(type="module" src='build/scripts/client.js')
