views now show get response, fixed .env.example, changed tests

--- a/views/user.pug
+++ b/views/user.pug
@@ -5,6 +5,9 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
-    h1= "The message is:" + message
+    h1= "The users is"
+      h2=message.id
+      h2=message.username
+      h2=message.age
     // script(type="commonjs" src='./scripts/client.js')
   
