rest server tests now work, changed views, added websocket tests

--- a/views/404.pug
+++ b/views/404.pug
@@ -1,10 +1,3 @@
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title= title
-  body
+block content
+    a.btn(href="/") Go back
     h1= "No user found!"
-    // script(type="commonjs" src='./scripts/client.js')
-  
