--- a/views/user.pug
+++ b/views/user.pug
@@ -5,9 +5,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
-    h1= "The users is"
+    h1= "The user is"
       h2=message.id
       h2=message.username
       h2=message.age
-    // script(type="commonjs" src='./scripts/client.js')
-  
