--- a/views/users.pug
+++ b/views/users.pug
@@ -5,9 +5,8 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
+  a.btn(href="/users") Press to see all users
   h1="Id/Username/Age"
     ul
     for item in message
       li= item.id +" / "+ item.username +" / " + item.age
-    // script(type="commonjs" src='./scripts/client.js')
-  
