changed view and tes for views

--- a/views/user.pug
+++ b/views/user.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
+    a.btn(href="/") Go back
     h1= "The user is"
       h2=message.id
       h2=message.username
