--- a/views/users.pug
+++ b/views/users.pug
@@ -5,8 +5,8 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
   body
-  a.btn(href="/users") Press to see all users
-  h1="Id / Username / Age / Email"
+  a.btn(href="/") Go back
+  h1="Id / Username / Age"
     ul
     for item in message
-      li= "ID: " + item.id +" /  Username: "+ item.username +" / Age: " + item.age +" / Email: " +item.email
+      li= "ID: " + item.id +" /  Username: "+ item.username
