--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
-.btn{
-  background-color: #4CAF50;
+.btn {
+  background-color: #4caf50;
   padding: 10px;
   text-decoration: none;
   font-size: 20px;
