reworked project, changed rest-api

--- a/views/rest/rest_index.pug
+++ b/views/rest/rest_index.pug
@@ -1,4 +1,4 @@
 extends layout
 block content
-    a.btn(href="/users") Press to see all users
+    a.btn(href="/user") Press to see all users
     h1= "The message is:" + message
