--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,3 +5,11 @@
   font-size: 20px;
   color: white;
 }
+.background{
+  background-color: #efefef;
+}
+
+.checkbox{
+  width: 40px;
+  height: 40px;
+}
