--- a/views/rest/layout.pug
+++ b/views/rest/layout.pug
@@ -1,10 +1,13 @@
 html 
   head
     meta(charset="UTF-8")
+    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css')
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel='stylesheet' href='../css/index.css')
     title="SERVER"
-    link(rel='stylesheet' href='../css/index.css')
-  body
+    
+  body.background
     block content
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js')
