--- a/views/rest/layout.pug
+++ b/views/rest/layout.pug
@@ -9,5 +9,6 @@ html
     
   body.background
     block content
+    script(src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous")
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js')
